# telematics-api

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh
.github/: pull_request_template.md
.github/workflows/: main.yml
doc/: Doxyfile  vehiclestatuscodes.md
doc/api/: API.md  API_template.md  Header.json  README.md  Vehicle_Status_Codes.md  Vehicle_Status_Codes_template.md  challenge_response.md  challenge_response_template.md  crc_calculation.md  crc_calculation_template.md  merge_json_to_md.sh
doc/api/read/: available_maneuvers.json  cabin_status.json  maneuver_status.json  mobile_challenge.json  threat_data.json  vehicle_api_version.json  vehicle_init.json  vehicle_status.json
doc/api/write/: cabin_commands.json  deadmans_handle.json  maneuver_init.json  mobile_init.json  mobile_response.json  send_pin.json
doc/md/: index.md
include/: constants.h  remotedevicehandler.hpp  signalhandler.hpp  sockethandler.hpp  templatehandler.hpp  udppacket.hpp
src/: main.cpp  remotedevicehandler.cpp  signalhandler.cpp  sockethandler.cpp  templatehandler.cpp
test/: CMakeLists.txt  asp_signal_tests.cpp  main.cpp  mobile_comms_tests.cpp  signalhandler_tests.cpp  tcm_signal_tests.cpp  testutils.cpp  testutils.hpp
utils/: key_for_mobile_placeholder.py  mobile_placeholder.py
utils/asp_simulator/: CMakeLists.txt  README.md  aspm.cpp  aspm.hpp  main.cpp
utils/example_json/: cabin_commands.json  deadmans_handle.json  header.json  maneuver_init.json  mobile_init.json  mobile_response.json  send_pin.json
